--- a/GamerPlus/GamerPlus/Views/Home/Index.cshtml
+++ b/GamerPlus/GamerPlus/Views/Home/Index.cshtml
@@ -1,14 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
-<link href="~/fontawesome-free-5.13.0-web/css/all.min.css" rel="stylesheet" />
-<style>
-
-</style>
-
 <div class="main">
-
     <div class="topbar">
         <div class="mynav">
             <div class="nav_icons">
@@ -32,20 +25,15 @@
         </div>
     </div>
     <div class="mainbody">
-
         <div class="leftside">
             @{Html.RenderAction("GamingConsole", "Home");}
         </div><!--
     --><div class="rightside">
-
            <div class="topfour">
-
                <div id="carouselmain" class="carousel_main">
                    @{Html.RenderAction("Carousel", "Home", new { consoleId = 1 });}
                </div>
-               
            </div>
-
            <div class="btnmain_div">
                <div class="btnmain_divinner">
                    <div class="btncenter_div">
@@ -58,33 +46,15 @@
                    </div>
                </div>
                <div class="btnmain_divinner" style="">
-                   <div class="letters_div">
-                       @*<div class="letter_div0">
-                           <span class="letter">All</span>
-                       </div>*@
-                   </div>
+                   <div class="letters_div"></div>
                </div>
            </div> 
-
            <div class="gamelist">
-
                @{Html.RenderAction("GenreList", "Home", new { consoleId = 1, alpa = "All" });}
-
            </div>
-
            <div class="gamelist_">
-
                @{Html.RenderAction("AllGameList", "Home", new { consoleId = 1, alpa = "All" });}
-
            </div>
-           
        </div>
-
     </div>
-    
-
 </div>
-
-<script>
-
-</script>
