--- a/GamerPlus/GamerPlus/Views/Home/Index.cshtml
+++ b/GamerPlus/GamerPlus/Views/Home/Index.cshtml
@@ -15,7 +15,9 @@
                         <div class="fas fa-search icon"></div>
                     </div><!--
                  --><div class="icon_div">
-                        <div class="fas fa-shopping-bag icon"></div>
+                        <div class="fas fa-shopping-bag icon">
+                            <div class="reddot"></div>
+                        </div>
                     </div><!--
                  --><div class="icon_div">
                         <div class="fas fa-user-circle icon"></div>
