--- a/GamerPlus/GamerPlus/Views/Shared/_Layout.cshtml
+++ b/GamerPlus/GamerPlus/Views/Shared/_Layout.cshtml
@@ -16,7 +16,20 @@
 <body style="">
     <div class="modalMain">
         <div class="modalGameDetails">
-            <div class="closeModal" onclick="closeModal(this);" ><span class="closed glyphicon glyphicon-remove"></span></div>
+            <div class="closeModal" onclick="closeModal(this);"><span class="closed glyphicon glyphicon-remove"></span></div>
+        </div>
+    </div>
+    <div class="bagModalMain">
+        <div class="bagModal">
+            <div class="bagCenter">
+                <div class="bagCheckicon">
+                    <div class="bag fas fa-shopping-bag"></div>
+                    <div class="check fas fa-check"></div>
+                </div>
+                <div class="msgadd_div">
+                    <span class="msgadd">Added to Bag</span>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container body-content">
